--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div class = "container">
+    <div id="post"></div>
+    <div id = "newPost" class = "container">
         <div class = "row justify-content-md-center">
             <div class = "col col-lg-2">
                 <input id = "title"type="text">
