ommitted the README file in the last push so include it now.

--- a/client/index.html
+++ b/client/index.html
@@ -12,22 +12,18 @@
 <body>
     <div id="post"></div>
     <div id = "newPost" class = "container">
-        <div class = "row justify-content-md-center">
-            <div class = "col col-lg-2">
-                <input id = "title"type="text">
+        <div class = "col">
+            <div class = "row-1">
+                <input id = "title"type="text" placeholder="Title" >
             </div>
-            <div class = "col-md-auto offset-md-3">
-                <input id = "submit" type="button" value = "submit">
+            <div class = "row-1">
+                <input id = "name" type="text" placeholder="Your name">
             </div>
-        </div>
-        <div class = "row justify-content-md-center">
-            <div class = "col-md-auto">
-                <input id = "name" type="text">
+            <div class = "row-1">
+                <input id = "story" type="text"placeholder="Your story...">
             </div>
-        </div>
-        <div class = "row justify-content-md-center">
-            <div class = "col-md-auto">
-                <input id = "story" type="text">
+            <div class = "row-1">
+                <input type="button" class = "btn btn-light btn-outline-dark rounded border-2" id = "submit" value = "PUBLISH">
             </div>
         </div>
     </div>
